# core/core-server/src/main/java/ai/wanaku/server/quarkus/api/v1/management/discovery/DiscoveryBean.java
@@ -63,8 +63,8 @@ public class DiscoveryBean {
         }
     }
 
-    public void registerService(ServiceTarget target) {
-        serviceRegistry.register(target);
+    public ServiceTarget registerService(ServiceTarget target) {
+        return serviceRegistry.register(target);
     }
 
     public void deregisterService(ServiceTarget target) {
